Configuracion para creacion de artefactos dockerizados